[gd_scene load_steps=2 format=2]

[ext_resource path="res://Networking/Lobby/Menus/CreateMatchMenu.gd" type="Script" id=1]

[node name="CreateMatchMenu" type="Control"]
anchor_right = 1.0
anchor_bottom = 1.0
script = ExtResource( 1 )
__meta__ = {
"_edit_use_anchors_": false
}

[node name="BG" type="ColorRect" parent="."]
anchor_right = 1.0
anchor_bottom = 1.0
margin_left = 186.0
margin_top = 94.0
margin_right = -185.0
margin_bottom = -93.0
color = Color( 0.192157, 0.152941, 0.152941, 1 )

[node name="Holder" type="Control" parent="."]
anchor_right = 1.0
anchor_bottom = 1.0
margin_left = 200.0
margin_top = 109.0
margin_right = -200.0
margin_bottom = -108.0

[node name="BG" type="ColorRect" parent="Holder"]
anchor_right = 1.0
anchor_bottom = 1.0
color = Color( 0.0588235, 0.0117647, 0.0117647, 1 )
__meta__ = {
"_edit_use_anchors_": false
}

[node name="VBoxContainer" type="VBoxContainer" parent="Holder"]
anchor_right = 1.0
anchor_bottom = 1.0
alignment = 1
__meta__ = {
"_edit_use_anchors_": false
}

[node name="MatchName" type="HBoxContainer" parent="Holder/VBoxContainer"]
margin_top = 148.0
margin_right = 624.0
margin_bottom = 172.0
alignment = 1

[node name="Label" type="Label" parent="Holder/VBoxContainer/MatchName"]
margin_left = 188.0
margin_top = 5.0
margin_right = 281.0
margin_bottom = 19.0
text = "Match Name : "

[node name="MatchName" type="LineEdit" parent="Holder/VBoxContainer/MatchName"]
margin_left = 285.0
margin_right = 435.0
margin_bottom = 24.0
rect_min_size = Vector2( 150, 20 )
align = 1
caret_blink = true

[node name="MatctchPW" type="HBoxContainer" parent="Holder/VBoxContainer"]
margin_top = 176.0
margin_right = 624.0
margin_bottom = 200.0
alignment = 1

[node name="Label2" type="Label" parent="Holder/VBoxContainer/MatctchPW"]
margin_left = 177.0
margin_top = 5.0
margin_right = 292.0
margin_bottom = 19.0
text = "Match Password : "

[node name="MatchPW" type="LineEdit" parent="Holder/VBoxContainer/MatctchPW"]
margin_left = 296.0
margin_right = 446.0
margin_bottom = 24.0
rect_min_size = Vector2( 150, 20 )
align = 1
secret = true
caret_blink = true

[node name="HBoxContainer" type="HBoxContainer" parent="Holder/VBoxContainer"]
margin_top = 204.0
margin_right = 624.0
margin_bottom = 234.0
alignment = 1

[node name="Create Button" type="Button" parent="Holder/VBoxContainer/HBoxContainer"]
margin_left = 210.0
margin_right = 310.0
margin_bottom = 30.0
rect_min_size = Vector2( 100, 30 )
text = "Create"

[node name="CancelButton" type="Button" parent="Holder/VBoxContainer/HBoxContainer"]
margin_left = 314.0
margin_right = 414.0
margin_bottom = 30.0
rect_min_size = Vector2( 100, 30 )
text = "Back"

[connection signal="text_changed" from="Holder/VBoxContainer/MatchName/MatchName" to="." method="_on_MatchName_text_changed"]
[connection signal="text_changed" from="Holder/VBoxContainer/MatctchPW/MatchPW" to="." method="_on_MatchPW_text_changed"]
[connection signal="button_down" from="Holder/VBoxContainer/HBoxContainer/Create Button" to="." method="_on_Create_Button_button_down"]
[connection signal="button_down" from="Holder/VBoxContainer/HBoxContainer/CancelButton" to="." method="_on_CancelButton_button_down"]
